# bingobukku

./: README.md  bingobukku.toml  constantes.py  main.py  pyproject.toml
bo/: models.py
services/: objetivos.py  usuarios.py
statics/styles/: bingobukku.css  descripcion.css  indice.css  login.css  objetivo.css  registro.css
views/: componentes.py
